@@ -71,6 +71,11 @@
  * CQL support for altering key_validation_class in ALTER TABLE (CASSANDRA-3781)
  * turn compression on by default (CASSANDRA-3871)
  * make hexToBytes refuse invalid input (CASSANDRA-2851)
+ * Make secondary indexes CF inherit compression and compaction from their
+   parent CF (CASSANDRA-3877)
+Merged from 1.0:
+ * Only snapshot CF being compacted for snapshot_before_compaction
+   (CASSANDRA-3803)
 
 
 1.0.8
